# shepherd

./: .gitignore  .pylintrc  README.md  debug_converted.ply  debug_final.ply  debug_flipped.ply  debug_initial.ply  debug_original.ply  debug_rotated.ply  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
demo/: habitat_demo.py  pybullet_demo.py  query_demo.py  step_demo.py
demo/habitat_output/: habitat_point_cloud.ply
doc/: class_diagram.puml  pipeline_diagram.puml
shepherd_ros2/: package.xml  setup.cfg  setup.py
shepherd_ros2/shepherd_ros2/: shepherd_connector.py
src/shepherd/: __init__.py  database_wrapper.py  shepherd.py  shepherd_config.py
src/shepherd/models/: __init__.py  base_model.py  captioning_model.py  depth_model.py  detection_model.py  embedding_model.py  segmentation_model.py
src/shepherd/models/implementations/: __init__.py  blip.py  clip.py  dan.py  sam.py  yolo.py
src/shepherd/utils/: camera.py  visualization.py
